# ChangeLog for dev-ruby/ruby-rsvg
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-rsvg/ChangeLog,v 1.44 2012/12/26 07:13:32 graaff Exp $

*ruby-rsvg-1.1.8 (26 Dec 2012)

  26 Dec 2012; Hans de Graaff <graaff@gentoo.org> +ruby-rsvg-1.1.8.ebuild:
  Version bump.

*ruby-rsvg-1.1.6 (08 Dec 2012)

  08 Dec 2012; Hans de Graaff <graaff@gentoo.org> +ruby-rsvg-1.1.6.ebuild:
  Version bump.

  16 Oct 2012; Hans de Graaff <graaff@gentoo.org> -ruby-rsvg-0.19.4.ebuild:
  Remove old version.

*ruby-rsvg-1.1.5 (16 Oct 2012)

  16 Oct 2012; Hans de Graaff <graaff@gentoo.org> +ruby-rsvg-1.1.5.ebuild:
  Version bump.

  28 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> ruby-rsvg-1.1.3.ebuild:
  ppc stable wrt #428040

  27 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> ruby-rsvg-1.1.3.ebuild,
  ruby-rsvg-1.1.4.ebuild:
  Restore ~ppc keywording wrt #396605

*ruby-rsvg-1.1.4 (18 Aug 2012)

  18 Aug 2012; Hans de Graaff <graaff@gentoo.org> +ruby-rsvg-1.1.4.ebuild:
  Version bump.

  17 Aug 2012; Johannes Huber <johu@gentoo.org> ruby-rsvg-1.1.3.ebuild:
  Stable for x86, wrt bug #428040

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata.xml so that it's the same as most other packages.

  04 Aug 2012; Agostino Sarubbo <ago@gentoo.org> ruby-rsvg-1.1.3.ebuild:
  Stable for amd64, wrt bug #428040

  21 Jul 2012; Hans de Graaff <graaff@gentoo.org> -ruby-rsvg-1.1.0.ebuild:
  Remove old version.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> ruby-rsvg-0.19.4.ebuild,
  ruby-rsvg-1.0.3.ebuild, ruby-rsvg-1.1.0.ebuild, ruby-rsvg-1.1.3.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  01 May 2012; Raúl Porcel <armin76@gentoo.org> ruby-rsvg-0.19.4.ebuild:
  Drop ia64/sparc keywords

  17 Apr 2012; Jeff Horelick <jdhore@gentoo.org> ruby-rsvg-1.0.3.ebuild:
  marked x86 per bug 412097

*ruby-rsvg-1.1.3 (17 Apr 2012)
