@@ -7,18 +7,30 @@ DIST ruby-gnome2-all-1.1.4.tar.gz 1015295 SHA256 c892c2e2a8299ef430d0931e1eb7ef8
 DIST ruby-gnome2-all-1.1.5.tar.gz 1016680 SHA256 a740562bdc6d1a4a349c725a85439ddd188fed013e3d40c9ca0be91364d8f888 SHA512 bd63c2c62e00c81f3c0dda7fb8ed1c3615af9261592860a538f25f20c6433f29c2279e7ade02a0d17fb42b32529f766463d6bb3e0f7ab4afcffd3ecdeb7bb17c WHIRLPOOL c1d6c062aa40c7f5b47e1e8214e20fd0bca874a3be092f52937aa7f78f93e124e042ae5c3a0be7272be51059a7d7c47bd08dd714f5b10339df948411923f6464
 DIST ruby-gnome2-all-1.1.6.tar.gz 1018344 SHA256 220c3377335b1a429c76e02142b24f1b45dfdd13b5f3e5899bab2f0ccf4e2f6d SHA512 d7191a20fcede3ddfdaf90d049b845b144ae70a213312ce3c528337515141aaa877159ed32b6228b211431a66bd24604a213a12deb10e925991da105ac6404a0 WHIRLPOOL e2d5cf686589a2fb1e093a0427581d37fe1a446f2c28e759af539c906ca697b88a397c1816245c71fbeb50c2844a8f203df4d698a424f9a8c9a5bb9b534140b8
 DIST ruby-gnome2-all-1.1.8.tar.gz 1018612 SHA256 5118fc18eeff60cbe371e6461dc6329e7c544f1908219df42462274dace5968a SHA512 3ce05278fca4b402f5e8ec9883290022ad07ea800af436ee35ab6a4960e4004a0c076567c68587bee81a27d863ba54de19a7816585ce510d308b7e0e91fb1981 WHIRLPOOL b59ed271675ca8f9b80aeecd7d003537011a7162131176ca202b7a40fafae27cc8da687a50792985f07477dcf310a70d0c512692d649b3584d64653af9cf0e1b
+DIST ruby-gnome2-all-1.2.6.tar.gz 1718802 SHA256 b9e0093e82d53aead93ba1cd261faf03ccede873ee0e7ffd35090ce1c604be66 SHA512 b2e123ece31b89dc1d37040297d726b625d71579bbf60cb84c89b63f0fb9bf097d5f0675a16dfc7aecd8161913c737b22c057cc872dd454f341440c76901c07d WHIRLPOOL 2e4f47014b93838a9c31267fcca86458127ab9bc02b241a6bd0c3f14df8af7a25f6166d294577eb674f59c1e1d042208e5b448c83429011651dc6af0e9383b9a
 EBUILD ruby-rsvg-1.0.3.ebuild 644 SHA256 b6c19afbbe7c07973c37c66700cf16f5c7f34eb58fb148c51d4b89d331b14391 SHA512 a6d442e0a8b878c5e689592609dcfdf918a01064bf98bc9ab149bc7939506c38b584775b8a7a1d4503d9d2acf80b93a4347b76cb97c787dda21aac5f1ec593fe WHIRLPOOL 8119dd89ebeef47ac45468184269baf3b8b8e9cbf3363fae512fc6d0030611909bd7d9a505e8fb4ad28b01ba5abc801055acf9bb8b544c4fef1b119efe432555
 EBUILD ruby-rsvg-1.1.3.ebuild 659 SHA256 898ebeb2914e2f54cbd4b9cc75b519f5bb90dd5c540029d4168621d46dc5f2c2 SHA512 dc9bc9819dfab5cb08e9cf5d41a3e570369dde2007fc326d5cb48db999f4590e551634e5938fa10aa06b743a47e04648dcbc367d37090f95572d917abcbc205d WHIRLPOOL 194dcca2c10647a7289a61646f58bd8141f19ec325e7ebe7ac2b26855c0ada1be202604242dbd58943864725827bf157e4b94bdf7a7bbdbb9df7b2b7161a1b07
 EBUILD ruby-rsvg-1.1.4.ebuild 635 SHA256 1787504396e252d44a317a72d75d5661bc9af777b7efbcbb447fe98425f0f975 SHA512 e85e5cf7040e469952cdffa93acc02c7558bcd1f612e0a09081364868c335927047ed6d977dc2fe9e1f9ee40c5510f5725a147ced3508917f9769ac6993da283 WHIRLPOOL 8dadcefb3d0099497787f689104938761f63e77400d0c583c609e3c8cfb6d39867e15fed2639ea32505ca284ebadf50f76a05421aa59096de194469380d2c845
 EBUILD ruby-rsvg-1.1.5.ebuild 632 SHA256 4b5a44ac76f9c086ebd82a340d55c466a5707b1052d4f1288053939e625d75c9 SHA512 5fc6b0cd952fa4fe07ccfb74537aa92eb29a4846da352e04c641477c788f6e1c86c461b6815912103d5ea57a41c3a8c2e44f663b026f906bf9c050e047d7dcd0 WHIRLPOOL 1c53fe21a462aee521564c0c6c857411f541326745adf9dcb9df272499da40f9125f497b09178be9ad64afc829fe298d8e1538e8afbcf9f7041a5cba9363a0b1
 EBUILD ruby-rsvg-1.1.6.ebuild 632 SHA256 652807335387352fc3da96276f154396850daaff16fcc3aeee6c69859f2b3f93 SHA512 7e7b39368cdf816bcf141cdeb5448d6136af67dedc44e7a2bdf1d6dbefc06e9d071ec3074cea2ef03ad89b2ae473f41e573f5bf43bf8052a60420488289aa036 WHIRLPOOL fa504c9727963131dc622df5a015528a94e1980ce3f1ff9430ee718374de492535dc97f8e2c28c11d810ee59c916f69009d744c12b8ec4b28edabc6333f59284
 EBUILD ruby-rsvg-1.1.8.ebuild 632 SHA256 e2cf3d33c80764f116c565774fcd5161892d2f983651c7e60707745925ffb6be SHA512 2740cc60721c0d7b0d99d1391a5dc2b3fbf988e9d3d497e33ddfdb4e9581df3ea5d33a02e204c350d705ad32bb3c7d6c758ac5871943d260eae5ad22522857d1 WHIRLPOOL 0aa07cc2de5c3afb272219e40220c8554b0e7667b30fe307291e60925476972e997f34912df82b1ca9e81bf353650f6266ec2e7af613420a201911a90b937eff
-MISC ChangeLog 5728 SHA256 c371b00bfc175528d513daa288d4c73eb623c6526d08b64456921dc11ce3520a SHA512 63b2f9bc52298d9a18a88b2f77795340d71cbee37bbd0b699bc1d0c7cae82fe8f3f285209561b975120ce8dc1707bfc43eba4d71e3bd3602704d29dda9ba320a WHIRLPOOL 5885d8240a4e8b9a53a249f678399113fc1264403c22081852eab0543fb503742702a417f33ba559b3e71bfd6e97421658bbe1faee56e894892ac10591b11c94
+EBUILD ruby-rsvg-1.2.6.ebuild 631 SHA256 8db2fbdc3ac712644e3471fd71376ba64c3d9fb95a83ae5e30c5fddb7bf3043b SHA512 63fd94718a4e8cffc68387e38ef890c1df3cba230b5bcd0b4ff5c153718c924c77fab2d7cc906bae2f9e39efde79d40ef41eb70889ea08aec9437c3a81a57b11 WHIRLPOOL 68969286b7727ac0ee2434b5f5d6fbfca46a1c5d83531a5ccb454d7b31dbfad52cbf35432e2a1d2f9269446fd579b55dbc1eb7d07303ec20411842ab18fdc022
+MISC ChangeLog 5847 SHA256 21415be0e770f4a83dbfbdef28b8e6ee8d0ef0544305b6361c28e6c9f1a983f8 SHA512 5dc95acf411aa804baf31396406b2584d4257e40041d659e60d12c3c72e3b4e5b9e660312d0df494c1e589068f431be7ccc9f2c84dc20a8f808a558c59621935 WHIRLPOOL d29b1ba9ad1205d26bbce41ae93a4fde49dcad5b15057d175b2c6efbc559746e2fe7d37925b91cb73c08c22fbbde33089eb16186c1ec38c1b7b400d11749a916
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlDao54ACgkQiIP6VqMIqNd4iwD/VvkZGlYlbglkYKjuPrd0vxBx
-cDmwpQGBKXo1CBlhH6UA/RrUAUoiBO/pLUmZCEN/yLw7r58KSZnlyc4LRo1QCy9i
-=Llfb
+iQIcBAEBCAAGBQJRhIjRAAoJEDYO1FT4VRUUvcYQAJuPritAbH0fJWvfhRLSgMOs
+QeaqzrUgW8sOY6KJDpM/iR2jlxE9xYjKv2vIABDFutpeqn0PekG6D8NuOtNH8uI9
+mKRHY+RYWnONAD8F8qG8vtDvlqKwC3Tm1ExltuEo8QqEUi+kgzdRVXRmQzwjNnG6
+2Vd0f0ycXhF91pFhQ4KJwaMJK3mlGaxQCC6vRwDBUX7zRy80EhEQe9bMFV+zi9Es
+oKBH78prAjijEOwIqjbe9zUy2mxb6elycfH08x8XMfAJqRFpdjl3EzaXnzedtbBU
+z+I3+3kbF7j58LOmruP9qx4IxmFRDbQhtxqp5O8ya3rn5Ab1BUc72sJ9TE+Bd7Jr
+Q8iev78Z0FHI3P+27mgRvU80pOKH4pHAoNiHzWDTDZIWBPjJ8rNdblEbdZonPRII
+5hVvxPc6SZWo5wEqtAuL7fgP7z5JwMbgSMO+e0qQzMOxzUUHGVWjVA6kCoILKhHF
+MxokYoNJ1DiaBMYZ5tkSnSyyEI76PdMsL0whhitfRgKR7ckRDAJgpjcZ6KFshlUm
+A8PbXv2gfDhSzOESQm4QAy+TAndzfjws3yshAnR6ytUEzLBtekNvM2aDUUb2Ilio
+GFzLD6uLeMmu69ICBTHnTcs0BwHasEkObfoMzFBsiqoIr5tWgWIp8rVM08O+tKvn
+ssBe5XG7tyr6zG1P5p5U
+=Sy8j
 -----END PGP SIGNATURE-----
