@@ -1,0 +1,25 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-rsvg/ruby-rsvg-1.2.6.ebuild,v 1.1 2013/05/04 04:04:31 naota Exp $
+
+EAPI=4
+USE_RUBY="ruby18 ruby19 ree18"
+
+RUBY_FAKEGEM_NAME=rsvg2
+
+inherit ruby-ng-gnome2
+
+RUBY_S=ruby-gnome2-all-${PV}/rsvg2
+
+DESCRIPTION="Ruby bindings for librsvg"
+KEYWORDS="~amd64 ~ppc ~x86"
+IUSE="cairo"
+
+RDEPEND="${RDEPEND}
+	>=gnome-base/librsvg-2.8"
+DEPEND="${DEPEND}
+	>=gnome-base/librsvg-2.8"
+
+ruby_add_rdepend ">=dev-ruby/ruby-glib2-${PV}
+	>=dev-ruby/ruby-gdkpixbuf2-${PV}
+	cairo? ( dev-ruby/rcairo )"
